// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="cursor-pointer"
        data-testid="file-item"
        style="background-color: inherit;"
      >
        <td
          class="center aligned"
        >
          <div
            class="ui fitted checkbox"
            data-testid="file-select"
          >
            <input
              class="hidden"
              readonly=""
              tabindex="0"
              type="checkbox"
              value=""
            />
            <label />
          </div>
        </td>
        <td
          class="center aligned"
        >
          <i
            aria-hidden="true"
            class="ambulance icon"
          />
        </td>
        <td
          class=""
        >
          <i
            aria-hidden="true"
            class="info circle icon"
          />
          <a
            href="/study/undefined/documents/SF_5ZPEM167"
          >
            organization.jpeg
          </a>
        </td>
        <td
          class="center aligned four wide"
        >
          <div
            class="ui labels"
          >
            <span
              class="text-grey"
            />
          </div>
        </td>
        <td
          class="center aligned one wide"
        >
          <time
            datetime="2018-09-27T05:32:26.000Z"
            title="27 Sept 2018"
          >
            7 months ago
          </time>
        </td>
        <td
          class="center aligned"
        >
          <div
            class="ui small fluid buttons"
          >
            <button
              class="ui basic compact icon button"
            >
              <i
                aria-hidden="true"
                class="eye icon"
              />
            </button>
            <a
              class="ui basic compact icon button"
              data-testid="download-file"
              href="http://localhost:8080/download/study/SD_8WX8QQ06/file/SF_5ZPEM167/version/FV_KCDKCDYR"
              role="button"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
            </a>
            <button
              class="ui basic compact icon button"
              data-testid="copy-file-id"
            >
              <i
                aria-hidden="true"
                class="copy icon"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders latest temporary state 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="cursor-pointer"
        data-testid="file-item"
        style="background-color: inherit;"
      >
        <td
          class="center aligned"
        >
          <div
            class="ui fitted checkbox"
            data-testid="file-select"
          >
            <input
              class="hidden"
              readonly=""
              tabindex="0"
              type="checkbox"
              value=""
            />
            <label />
          </div>
        </td>
        <td
          class="center aligned"
        >
          <i
            aria-hidden="true"
            class="ambulance icon"
          />
        </td>
        <td
          class=""
        >
          <i
            aria-hidden="true"
            class="info circle icon"
          />
          <a
            href="/study/undefined/documents/SF_5ZPEM167"
          >
            organization.jpeg
          </a>
        </td>
        <td
          class="center aligned four wide"
        >
          <div
            class="ui labels"
          >
            <span
              class="text-grey"
            />
          </div>
        </td>
        <td
          class="center aligned one wide"
        >
          <time
            datetime="2018-09-27T05:32:27.000Z"
            title="27 Sept 2018"
          >
            7 months ago
          </time>
        </td>
        <td
          class="center aligned"
        >
          <div
            class="ui small fluid buttons"
          >
            <button
              class="ui basic compact icon button"
            >
              <i
                aria-hidden="true"
                class="eye icon"
              />
            </button>
            <a
              class="ui basic compact icon button"
              data-testid="download-file"
              href="http://localhost:8080/download/study/SD_8WX8QQ06/file/SF_5ZPEM167/version/FV_NVV741M1"
              role="button"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
            </a>
            <button
              class="ui basic compact icon button"
              data-testid="copy-file-id"
            >
              <i
                aria-hidden="true"
                class="copy icon"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders loading state 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="cursor-pointer"
        data-testid="file-item"
        style="background-color: inherit;"
      >
        <td
          class="center aligned"
        >
          <div
            class="ui fitted checkbox"
            data-testid="file-select"
          >
            <input
              class="hidden"
              readonly=""
              tabindex="0"
              type="checkbox"
              value=""
            />
            <label />
          </div>
        </td>
        <td
          class="center aligned"
        >
          <i
            aria-hidden="true"
            class="ambulance icon"
          />
        </td>
        <td
          class=""
        >
          <i
            aria-hidden="true"
            class="info circle icon"
          />
          <a
            href="/study/undefined/documents/SF_5ZPEM167"
          >
            organization.jpeg
          </a>
        </td>
        <td
          class="center aligned four wide"
        >
          <div
            class="ui labels"
          >
            <span
              class="text-grey"
            />
          </div>
        </td>
        <td
          class="center aligned one wide"
        >
          <time
            datetime="2018-09-27T05:32:26.000Z"
            title="27 Sept 2018"
          >
            7 months ago
          </time>
        </td>
        <td
          class="center aligned"
        >
          <div
            class="ui small fluid buttons"
          >
            <button
              class="ui basic compact icon button"
            >
              <i
                aria-hidden="true"
                class="eye icon"
              />
            </button>
            <a
              class="ui basic compact icon button"
              data-testid="download-file"
              href="http://localhost:8080/download/study/SD_8WX8QQ06/file/SF_5ZPEM167/version/FV_KCDKCDYR"
              role="button"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
            </a>
            <button
              class="ui basic compact icon button"
              data-testid="copy-file-id"
            >
              <i
                aria-hidden="true"
                class="copy icon"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
